name:                rpm
version:             1
license-file:        LICENSE
author:              Chris Lumens
maintainer:          clumens@redhat.com
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules:    RPM.Parse,
                        RPM.Tags,
                        RPM.Types

    other-modules:      RPM.Internal.Numbers

    build-depends:      attoparsec,
                        base >= 4.8 && < 4.9,
                        bytestring >= 0.10 && < 0.11,
                        conduit,
                        conduit-combinators,
                        conduit-extra,
                        mtl,
                        pretty,
                        resourcet

    default-language:   Haskell2010

    ghc-options:        -Wall

executable inspect
    main-is:            inspect.hs

    build-depends:      rpm,
                        attoparsec,
                        base >= 4.8 && < 4.9,
                        bytestring >= 0.10 && < 0.11,
                        conduit,
                        conduit-combinators,
                        conduit-extra,
                        mtl,
                        pretty,
                        resourcet,
                        transformers

    default-language:   Haskell2010

    ghc-options:        -Wall

executable unrpm
    main-is:            unrpm.hs

    build-depends:      rpm,
                        attoparsec,
                        base >= 4.8 && < 4.9,
                        bytestring >= 0.10 && < 0.11,
                        conduit,
                        conduit-combinators,
                        conduit-extra,
                        cpio-conduit,
                        directory,
                        filepath,
                        lzma-conduit,
                        mtl,
                        pretty,
                        resourcet

    default-language:   Haskell2010

    ghc-options:        -Wall
