name:                rpm
version:             1
license-file:        LICENSE
author:              Chris Lumens
maintainer:          clumens@redhat.com
build-type:          Simple
cabal-version:       >=1.10

library
    exposed-modules:    RPM.Parse,
                        RPM.Tags,
                        RPM.Types

    other-modules:      RPM.Internal.Numbers

    build-depends:      attoparsec >= 0.12.1.4,
                        attoparsec-binary,
                        base >= 4.7 && < 4.9,
                        bytestring >= 0.10 && < 0.11,
                        conduit,
                        conduit-combinators,
                        conduit-extra,
                        mtl >= 2.2.1,
                        pretty >= 1.1.2.0,
                        resourcet

    default-language:   Haskell2010

    ghc-options:        -Wall

executable inspect
    main-is:            inspect.hs

    build-depends:      rpm,
                        attoparsec >= 0.12.1.4,
                        attoparsec-binary,
                        base >= 4.7 && < 4.9,
                        bytestring >= 0.10 && < 0.11,
                        conduit,
                        conduit-combinators,
                        conduit-extra,
                        mtl >= 2.2.1,
                        pretty >= 1.1.2.0,
                        resourcet,
                        transformers

    default-language:   Haskell2010

    ghc-options:        -Wall

executable unrpm
    main-is:            unrpm.hs

    build-depends:      rpm,
                        attoparsec >= 0.12.1.4,
                        attoparsec-binary,
                        base >= 4.7 && < 4.9,
                        bytestring >= 0.10 && < 0.11,
                        conduit,
                        conduit-combinators,
                        conduit-extra,
                        cpio-conduit,
                        directory,
                        filepath,
                        lzma-conduit,
                        mtl >= 2.2.1,
                        pretty >= 1.1.2.0,
                        resourcet

    default-language:   Haskell2010

    ghc-options:        -Wall
