name:               rpm
version:            1
author:             Chris Lumens
maintainer:         clumens@redhat.com
build-type:         Simple
cabal-version:      >=1.10
license:            LGPL
license-file:       LICENSE

extra-doc-files:    examples/inspect.hs,
                    examples/rpm2json.hs,
                    examples/unrpm.hs

library
    exposed-modules:    Codec.RPM.Parse,
                        Codec.RPM.Tags,
                        Codec.RPM.Types,
                        Codec.RPM.Version

    other-modules:      Codec.RPM.Internal.Numbers

    build-depends:      attoparsec >= 0.12.1.4,
                        attoparsec-binary,
                        base >= 4.7 && < 5.0,
                        bytestring >= 0.10 && < 0.11,
                        conduit >= 1.2.8,
                        conduit-combinators,
                        conduit-extra,
                        mtl >= 2.2.1,
                        parsec,
                        pretty >= 1.1.2.0,
                        resourcet,
                        text

    default-language:   Haskell2010

    ghc-options:        -Wall

test-suite tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     tests
    main-is:            Spec.hs
    
    build-depends:      HUnit,
                        hspec,
                        hspec-attoparsec,
                        base >= 4.7 && < 5.0,
                        bytestring,
                        attoparsec,
                        rpm,
                        text

    default-language:   Haskell2010

    ghc-options:        -Wall
